...

                <TextView android:text="@string/I_would_like_to_spend" android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:layout_gravity="left"
                    android:textColor="@color/white" android:textSize="20sp"/>

                    <EditText
                        android:id="@+id/spend_id"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginLeft="5dp"
                        android:hint="$"
                        android:background="@color/white"
...
                    android:background="@drawable/round_button"
                    android:layout_marginRight="5dp" />

            </LinearLayout>

            <Button
                android:id="@+id/createBudgetButton"
                android:onClick="createBudgetButtonClicked"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/create_budget"
                android:layout_gravity="center_horizontal"
...
